*************************************************************************************************************
                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 28-04-2005 added: Initial Replaygain support to PAPlayer - only works from ID3v2 tags (non-standard) atm.
  - 28-04-2005 added: APE lossless support to PAPlayer.
  - 28-04-2005 changed: Refactored PAPlayer to remove all the mp3-specific code.
  - 28-04-2005 changed: audioscrobbler info labels shown no info when scrobbler is disabled
  - 28-04-2005 fixed: rss feed could crash
  - 28-04-2005 updated: Chinese (Traditional) language file (Thnx to dog099)
  - 28-04-2005 updated: French language file (Thnx to modhack)
  - 28-04-2005 updated: Norwegian language file (Thnx to vnm)
  - 27-04-2005 fixed: Goom/G-Force <width> and <height> related crashes.
  - 26-04-2005 added: Set Artist Thumb via Music Library context menu after an artist filter is applied
  - 26-04-2005 fixed: mute symbol is not shown after startup, if volume is minimum
  - 26-04-2005 changed: music scan dialog is not allocated at startup anymore
  - 26-04-2005 changed: auto discovered xbmsp server show network share icon now
  - 25-04-2005 updated: German language file
  - 25-04-2005 updated: Chinese (Traditional) language file (Thnx to dog099)
  - 25-04-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 25-04-2005 updated: Italian language file (Thnx to kotix)
  - 25-04-2005 updated: Norwegian language file (Thnx to vnm)
  - 24-04-2005 added: "Play Item" added to Music Context Menu to support PLAY action in Files and Library views since the Play action is not mapped by default on the gamepad